--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ urllib3==1.22
 virtualenv==15.1.0
 locustio==0.8.1
 git+https://github.com/blitzstern5/genesis-blockchain-tools
+git+https://github.com/blitzstern5/genesis-blockchain-tools@feature/send-tx
