--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ selenium==3.6.0
 urllib3==1.22
 locustio==0.8.1
 pytest==3.7.1
+PyYAML==3.13
 git+https://github.com/blitzstern5/genesis-blockchain-tools@feature/send-tx
