updated  test_contracts_dbUpdateExt and fixture

--- a/fixtures/simvolio.yaml
+++ b/fixtures/simvolio.yaml
@@ -794,7 +794,10 @@ dbUpdateExt:
       data {}
       conditions {}
       action {
-        DBUpdateExt("test", "name", "block2", {test: "updatedByName"})
+        DBUpdateExt("test", {id: 1}, {test: "updatedById=1"})
+        DBUpdateExt("test", {id: 2}, {test: "updatedById=2"})
+        DBUpdateExt("test", {test: "updatedById=2"}, {test: "updatedByName"})
+        DBUpdateExt("test", {"$and": [{id:{"$gte": 3}}, {id:{"$lte": 5}}]}, {test: "updateIdBetween3-5"})
       }
     }
   asert: ""
