--- a/fixtures/simvolio.yaml
+++ b/fixtures/simvolio.yaml
@@ -27,10 +27,7 @@ Throw:
         }
       }
     }
-  asert: |
-    {"blockid":"","errmsg":
-    {"type":"exception","error":"There is some problem","id":"Problem"},
-    "result":""}
+  asert: "{'blockid': '', 'errmsg': {'type': 'exception', 'error': 'There is some problem', 'id': 'Problem'}, 'result': ''}}"
 
 
 toUpper:
