--- a/fixtures/simvolio.yaml
+++ b/fixtures/simvolio.yaml
@@ -27,7 +27,7 @@ Throw:
         }
       }
     }
-  asert: "{'blockid': '', 'errmsg': {'type': 'exception', 'error': 'There is some problem', 'id': 'Problem'}, 'result': ''}}"
+  asert: ""
 
 
 toUpper:
