replaced expected result into fixtures

--- a/fixtures/simvolio.yaml
+++ b/fixtures/simvolio.yaml
@@ -27,7 +27,15 @@ Throw:
         }
       }
     }
-  asert: ""
+  asert: {
+            'blockid': '',
+            'errmsg': {
+                'type': 'exception',
+                'error': 'There is some problem',
+                'id': 'Problem'
+            },
+            'result': '',
+        }
 
 
 toUpper:
