added test and fixture for not valid utf-8 string

--- a/fixtures/simvolio.yaml
+++ b/fixtures/simvolio.yaml
@@ -1098,3 +1098,15 @@ UpdateRolesNotifications:
       }
     }
   asert: "True"
+
+
+NotValidStringUTF8:
+  code: |
+    {
+      data {}
+      action {
+        $result = DBFind("keys")
+      }
+    }
+  asert: "Result is not valid utf-8 string"
+
