--- a/testConfig.json
+++ b/testConfig.json
@@ -3,5 +3,6 @@
 "wait_tx_status_multi": 3000,
 "wait_upating_node": 6000,
 "wait_sync": 60,
-"networkID": "130186"
+"networkID": "130186",
+"maxBodySize": 64000000
 }
