maked tests to work with two types of network.

--- a/testConfig.json
+++ b/testConfig.json
@@ -1,9 +1,10 @@
 {
-"wait_tx_status": 100,
-"wait_tx_status_multi": 3000,
-"wait_upating_node": 6000,
-"wait_sync": 60,
-"wait_external": 60,
-"networkID": "130186",
-"maxBodySize": 64000000
+    "wait_tx_status": 100,
+    "wait_tx_status_multi": 3000,
+    "wait_upating_node": 6000,
+    "wait_sync": 60,
+    "wait_external": 60,
+    "networkID": "130186",
+    "maxBodySize": 64000000,
+    "net_work": "cn"
 }
